// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFD23F",
          "borderRadius": 25,
          "height": 50,
          "justifyContent": "center",
          "width": 670,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#FFFFFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "position": "absolute",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "600",
          },
          undefined,
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      06b5f369-ec66-4e0a-8777-90c71dec3f7b
    </Text>
  </View>
</View>
`;

exports[`Button renders correctly as disabled 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFD23F",
          "borderRadius": 25,
          "height": 50,
          "justifyContent": "center",
          "width": 670,
        },
        undefined,
        Object {
          "backgroundColor": "#B1AFB7",
          "opacity": 0.7,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#FFFFFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "position": "absolute",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "600",
          },
          undefined,
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      15013b10-4256-4d32-b25f-a031dfb6ce95
    </Text>
  </View>
</View>
`;

exports[`Button renders correctly in full width 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFD23F",
          "borderRadius": 25,
          "height": 50,
          "justifyContent": "center",
          "width": 670,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#FFFFFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "position": "absolute",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "600",
          },
          undefined,
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      099349fd-1c84-415b-818f-c8c6af2ea8e7
    </Text>
  </View>
</View>
`;
